--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -1,182 +1,195 @@
 {
   "extName": {
-    "message": "AI Timeline - ไทม์ไลน์เชิงโต้ตอบสำหรับการสนทนา AI, คัดลอก LaTeX ได้ง่าย"
+    "message": "AI Timeline: LaTeX, ไทม์ไลน์, Enter บรรทัดใหม่, บันทึกพรอมต์"
   },
   "extDescription": {
-    "message": "แปลงการสนทนา AI ของคุณเป็นไทม์ไลน์เชิงโต้ตอบ 🚀แสดงตัวอย่างและนำทางอย่างรวดเร็ว, 📌ทำเครื่องหมายโหนดการสนทนา, ⭐️ทำเครื่องหมายหน้าแชท, ❤️คัดลอกสูตร LaTeX, เพิ่มประสิทธิภาพเป็นสองเท่า!"
+    "message": "สำหรับ ChatGPT, DeepSeek, Gemini, Grok และโมเดลอื่นๆ เครื่องมือการทำงานร่วมกับ AI ที่ทรงพลังที่สุด เพิ่มประสิทธิภาพการทำงานกับ AI เป็นสองเท่า!"
   },
-  "viewStarred": {
-    "message": "ดูรายการโปรด"
+  "qwxpzm": {
+    "message": "บันทึก"
   },
-  "starredList": {
-    "message": "รายการโปรดของฉัน"
+  "hkjvnr": {
+    "message": "ดูรายการบันทึก"
   },
-  "close": {
-    "message": "ปิด"
+  "zmvkpx": {
+    "message": "บันทึกการสนทนา"
   },
-  "unstarSuccess": {
-    "message": "Unstarred"
+  "bpxjkw": {
+    "message": "ยกเลิกการบันทึก"
   },
-  "unstarFailed": {
-    "message": "Failed to unstar"
+  "vnkxpm": {
+    "message": "รายการบันทึก"
   },
-  "starSuccess": {
-    "message": "Starred"
+  "kxpmzv": {
+    "message": "บันทึกสำเร็จ"
   },
-  "noStarredItems": {
-    "message": "ไม่มีรายการโปรด"
+  "pzmvkx": {
+    "message": "ยกเลิกการบันทึกแล้ว"
   },
-  "copied": {
+  "jwvnkp": {
+    "message": "ไม่มีข้อมูล"
+  },
+  "mvkxpz": {
+    "message": "คัดลอก"
+  },
+  "xpzmvk": {
     "message": "คัดลอกแล้ว"
   },
-  "copyContent": {
-    "message": "Copy Content"
+  "vkpxzm": {
+    "message": "แก้ไข"
   },
-  "copyFailed": {
-    "message": "Copy Failed"
+  "kpzmvx": {
+    "message": "การคัดลอกล้มเหลว"
   },
-  "starChat": {
-    "message": "ทำเครื่องหมายหน้าแชท"
+  "zmxvkp": {
+    "message": "กรุณากรอก"
   },
-  "unstarChat": {
-    "message": "Unstar"
-  },
-  "inputChatTheme": {
-    "message": "ป้อนชื่อรายการโปรด:"
-  },
-  "themePlaceholder": {
-    "message": "ป้อน"
-  },
-  "cancel": {
+  "pxvkmz": {
     "message": "ยกเลิก"
   },
-  "confirm": {
+  "vkmzpx": {
     "message": "ยืนยัน"
   },
-  "themeRequired": {
+  "mzpxvk": {
     "message": "หัวข้อต้องไม่ว่างเปล่า"
   },
-  "unstar": {
-    "message": "ลบออกจากรายการโปรด"
+  "xvkpmz": {
+    "message": "เปลี่ยนชื่อ"
   },
-  "viewStarredList": {
-    "message": "ดูรายการโปรด"
-  },
-  "edit": {
-    "message": "แก้ไขเนื้อหา"
-  },
-  "editStarredContent": {
-    "message": "แก้ไขชื่อรายการโปรด"
-  },
-  "contentRequired": {
+  "pzmkvx": {
     "message": "เนื้อหาต้องไม่ว่างเปล่า"
   },
-  "dataStorageNote": {
-    "message": "ข้อมูลทั้งหมดเก็บไว้ในเครื่อง"
+  "kmvxpz": {
+    "message": "ข้อมูลทั้งหมดจัดเก็บในเบราว์เซอร์ของคุณ"
   },
-  "projectOpenSource": {
-    "message": "โอเพ่นซอร์ส, ยินดีต้อนรับ"
+  "vxpzmk": {
+    "message": "โอเพนซอร์ส ยินดีต้อนรับ"
   },
-  "starOnGitHub": {
-    "message": "Star on GitHub"
+  "mkvxpz": {
+    "message": "ติดดาวบน GitHub"
   },
-  "shareIfUseful": {
+  "xpzmkv": {
     "message": "แชร์กับเพื่อน"
   },
-  "chromeWebStore": {
-    "message": "Chrome Store"
+  "pkmzvx": {
+    "message": "Chrome เว็บสโตร์"
   },
-  "copyLatexFormula": {
+  "mvxkpz": {
     "message": "คัดลอกสูตร LaTeX"
   },
-  "latexFormulaCopied": {
-    "message": "คัดลอกสำเร็จ"
+  "kxvpmz": {
+    "message": "โฟลเดอร์ใหม่"
   },
-  "createFolder": {
-    "message": "Create Folder"
+  "vpmzkx": {
+    "message": "โฟลเดอร์ย่อยใหม่"
   },
-  "createSubfolder": {
-    "message": "Create Subfolder"
+  "mzxvkp": {
+    "message": "ลบ"
   },
-  "delete": {
-    "message": "Delete"
+  "pkxvmz": {
+    "message": "โฟลเดอร์เริ่มต้น"
   },
-  "defaultFolder": {
-    "message": "Default Folder"
+  "xmkvpz": {
+    "message": "สร้างโฟลเดอร์ย่อยใน「{folderName}」"
   },
-  "createNewFolder": {
-    "message": "Create New Folder"
+  "vzkpmx": {
+    "message": "กรุณากรอกชื่อโฟลเดอร์"
   },
-  "createSubfolderIn": {
-    "message": "Create subfolder in «{folderName}»"
+  "kmxpvz": {
+    "message": "จำเป็นต้องระบุชื่อโฟลเดอร์"
   },
-  "folderNamePlaceholder": {
-    "message": "Enter folder name"
+  "pxmzvk": {
+    "message": "เปลี่ยนชื่อโฟลเดอร์"
   },
-  "folderNameRequired": {
-    "message": "Folder name is required"
+  "mvzxkp": {
+    "message": "กรุณากรอกชื่อใหม่"
   },
-  "editFolderName": {
-    "message": "Edit Folder Name"
+  "kpvzmx": {
+    "message": "ชื่อโฟลเดอร์มีอยู่แล้ว"
   },
-  "newNamePlaceholder": {
-    "message": "Enter new name"
+  "xzvkpm": {
+    "message": "สร้างสำเร็จ"
   },
-  "folderNameExists": {
-    "message": "Folder name already exists"
+  "vmkxpz": {
+    "message": "อัปเดตสำเร็จ"
   },
-  "folderCreated": {
-    "message": "Folder created successfully"
+  "zpxmkv": {
+    "message": "ไม่พบโฟลเดอร์"
   },
-  "folderUpdated": {
-    "message": "Folder updated successfully"
+  "kvpzmx": {
+    "message": "ลบโฟลเดอร์แล้ว"
   },
-  "editFailed": {
-    "message": "Edit failed"
+  "mxkvzp": {
+    "message": "การลบล้มเหลว"
   },
-  "folderNotFound": {
-    "message": "Folder not found"
+  "pzvkmx": {
+    "message": "ย้ายสำเร็จ"
   },
-  "folderDeleted": {
-    "message": "Folder deleted successfully"
-  },
-  "deleteFailed": {
-    "message": "Delete failed"
-  },
-  "updated": {
-    "message": "Updated"
-  },
-  "createFolderFirst": {
-    "message": "Please create a folder first"
-  },
-  "selectTargetFolder": {
-    "message": "Select target folder (enter number):\n0. Uncategorized\n"
-  },
-  "invalidSelection": {
-    "message": "Invalid selection"
-  },
-  "moved": {
-    "message": "Moved successfully"
-  },
-  "move": {
+  "vxkpmz": {
     "message": "ย้ายไปยัง"
   },
-  "copyLink": {
-    "message": "Copy Link"
+  "wjxnkp": {
+    "message": "ลบโฟลเดอร์「{folderName}」?\n\nโฟลเดอร์นี้และโฟลเดอร์ย่อยมีรายการที่บันทึกไว้ {count} รายการ รายการเหล่านี้จะถูกย้ายไปยังโฟลเดอร์เริ่มต้น"
   },
-  "moveFailed": {
-    "message": "Move failed"
+  "qzmvkx": {
+    "message": "คุณแน่ใจหรือไม่ว่าต้องการลบโฟลเดอร์「{folderName}」?"
   },
-  "confirmDeleteFolder": {
-    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  "mvkzpx": {
+    "message": "ค้นหาในรายการบันทึก..."
   },
-  "uncategorized": {
-    "message": "Uncategorized"
+  "kxzpmv": {
+    "message": "บันทึกไปยัง"
   },
-  "confirmDeleteEmptyFolder": {
-    "message": "คุณแน่ใจหรือไม่ว่าต้องการลบโฟลเดอร์ «{folderName}»?"
+  "vmzpkx": {
+    "message": "โฟลเดอร์เริ่มต้น"
   },
-  "searchStarred": {
-    "message": "ค้นหารายการโปรด..."
+  "pkmvxz": {
+    "message": "หัวข้อ"
+  },
+  "pxkmvz": {
+    "message": "ไทม์ไลน์"
+  },
+  "mzkvxp": {
+    "message": "เมื่อเปิดใช้งาน ไทม์ไลน์แบบโต้ตอบจะปรากฏทางด้านขวาของหน้า AI"
+  },
+  "vkpmzx": {
+    "message": "ใช้ปุ่มคีย์บอร์ด ↑ / ↓ เพื่อนำทางการสนทนา"
+  },
+  "xpvmkz": {
+    "message": "เมื่อเปิดใช้งาน ใช้ปุ่มคีย์บอร์ด ↑ / ↓ เพื่อข้ามไปมาระหว่างบันทึกการสนทนาอย่างรวดเร็ว"
+  },
+  "xmvkpz": {
+    "message": "กล่องป้อนข้อมูลการสนทนา"
+  },
+  "kvzmxp": {
+    "message": "ใช้ปุ่ม Enter ของคีย์บอร์ดเพื่อขึ้นบรรทัดใหม่"
+  },
+  "mxpzvk": {
+    "message": "เมื่อเปิดใช้งาน ในกล่องป้อนข้อมูลการสนทนา AI กดปุ่ม Enter ครั้งเดียวเพื่อขึ้นบรรทัดใหม่ กดสองครั้งอย่างรวดเร็วเพื่อส่งข้อความ"
+  },
+  "kpxvmz": {
+    "message": "คัดลอกสูตร"
+  },
+  "zmkvpx": {
+    "message": "คัดลอกสูตร LaTeX"
+  },
+  "vxkpzm": {
+    "message": "เมื่อเปิดใช้งาน ระบุสูตรบนหน้าโดยอัตโนมัติและคลิกเพื่อคัดลอกในรูปแบบ LaTeX"
+  },
+  "mkvzpx": {
+    "message": "แพลตฟอร์มที่รองรับ"
+  },
+  "zpkmvx": {
+    "message": "Enter เพื่อขึ้นบรรทัดใหม่"
+  },
+  "vxmkpz": {
+    "message": "ปุ่ม Enter: กดครั้งเดียวเพื่อขึ้นบรรทัดใหม่ กดสองครั้งเพื่อส่ง"
+  },
+  "mkpxvz": {
+    "message": "เมื่อเปิดใช้งาน ในกล่องป้อนข้อมูลการสนทนา AI กดปุ่ม Enter ครั้งเดียวเพื่อขึ้นบรรทัดใหม่ กดสองครั้งอย่างรวดเร็วเพื่อส่งข้อความ"
+  },
+  "zpvmkx": {
+    "message": "การบันทึกล้มเหลว"
   }
 }
+
