--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1,182 +1,195 @@
 {
   "extName": {
-    "message": "AI Timeline - Interaktive Zeitleiste für KI-Gespräche, einfaches LaTeX-Kopieren"
+    "message": "AI Timeline: LaTeX kopieren, Zeitleiste, Enter für neue Zeile, Prompt-Memo"
   },
   "extDescription": {
-    "message": "Verwandeln Sie Ihre KI-Gespräche in interaktive Zeitleisten. 🚀Schnelle Vorschau und Navigation, 📌Gesprächsknoten markieren, ⭐️Chat-Seiten markieren, ❤️LaTeX-Formeln kopieren, verdoppeln Sie Ihre Effizienz!"
+    "message": "Für ChatGPT, DeepSeek, Gemini, Grok und weitere Modelle. Das leistungsstärkste KI-Kollaborationstool, verdoppeln Sie Ihre KI-Effizienz!"
   },
-  "viewStarred": {
-    "message": "Favoriten anzeigen"
+  "qwxpzm": {
+    "message": "Speichern"
   },
-  "starredList": {
-    "message": "Meine Favoriten"
+  "hkjvnr": {
+    "message": "Gespeicherte anzeigen"
   },
-  "close": {
-    "message": "Schließen"
+  "zmvkpx": {
+    "message": "Gespräch speichern"
   },
-  "unstarSuccess": {
-    "message": "Unstarred"
+  "bpxjkw": {
+    "message": "Speicherung aufheben"
   },
-  "unstarFailed": {
-    "message": "Failed to unstar"
+  "vnkxpm": {
+    "message": "Gespeicherte Liste"
   },
-  "starSuccess": {
-    "message": "Starred"
+  "kxpmzv": {
+    "message": "Erfolgreich gespeichert"
   },
-  "noStarredItems": {
-    "message": "Keine Favoriten"
+  "pzmvkx": {
+    "message": "Speicherung aufgehoben"
   },
-  "copied": {
+  "jwvnkp": {
+    "message": "Keine Daten"
+  },
+  "mvkxpz": {
+    "message": "Kopieren"
+  },
+  "xpzmvk": {
     "message": "Kopiert"
   },
-  "copyContent": {
-    "message": "Copy Content"
+  "vkpxzm": {
+    "message": "Bearbeiten"
   },
-  "copyFailed": {
-    "message": "Copy Failed"
+  "kpzmvx": {
+    "message": "Kopieren fehlgeschlagen"
   },
-  "starChat": {
-    "message": "Chat-Seite markieren"
-  },
-  "unstarChat": {
-    "message": "Unstar"
-  },
-  "inputChatTheme": {
-    "message": "Titel des Favoriten eingeben:"
-  },
-  "themePlaceholder": {
+  "zmxvkp": {
     "message": "Bitte eingeben"
   },
-  "cancel": {
+  "pxvkmz": {
     "message": "Abbrechen"
   },
-  "confirm": {
+  "vkmzpx": {
     "message": "Bestätigen"
   },
-  "themeRequired": {
+  "mzpxvk": {
     "message": "Thema darf nicht leer sein"
   },
-  "unstar": {
-    "message": "Markierung entfernen"
+  "xvkpmz": {
+    "message": "Umbenennen"
   },
-  "viewStarredList": {
-    "message": "Favoritenliste anzeigen"
-  },
-  "edit": {
-    "message": "Inhalt bearbeiten"
-  },
-  "editStarredContent": {
-    "message": "Favoriten-Titel bearbeiten"
-  },
-  "contentRequired": {
+  "pzmkvx": {
     "message": "Inhalt darf nicht leer sein"
   },
-  "dataStorageNote": {
-    "message": "Alle Daten lokal gespeichert"
+  "kmvxpz": {
+    "message": "Alle Daten werden lokal in Ihrem Browser gespeichert"
   },
-  "projectOpenSource": {
+  "vxpzmk": {
     "message": "Open Source, willkommen"
   },
-  "starOnGitHub": {
-    "message": "Star on GitHub"
+  "mkvxpz": {
+    "message": "Stern auf GitHub"
   },
-  "shareIfUseful": {
+  "xpzmkv": {
     "message": "Mit Freunden teilen"
   },
-  "chromeWebStore": {
-    "message": "Chrome Store"
+  "pkmzvx": {
+    "message": "Chrome Web Store"
   },
-  "copyLatexFormula": {
+  "mvxkpz": {
     "message": "LaTeX-Formel kopieren"
   },
-  "latexFormulaCopied": {
-    "message": "Erfolgreich kopiert"
+  "kxvpmz": {
+    "message": "Neuer Ordner"
   },
-  "createFolder": {
-    "message": "Create Folder"
+  "vpmzkx": {
+    "message": "Neuer Unterordner"
   },
-  "createSubfolder": {
-    "message": "Create Subfolder"
+  "mzxvkp": {
+    "message": "Löschen"
   },
-  "delete": {
-    "message": "Delete"
+  "pkxvmz": {
+    "message": "Standardordner"
   },
-  "defaultFolder": {
-    "message": "Default Folder"
+  "xmkvpz": {
+    "message": "Neuen Unterordner in「{folderName}」erstellen"
   },
-  "createNewFolder": {
-    "message": "Create New Folder"
+  "vzkpmx": {
+    "message": "Bitte Ordnernamen eingeben"
   },
-  "createSubfolderIn": {
-    "message": "Create subfolder in «{folderName}»"
+  "kmxpvz": {
+    "message": "Ordnername erforderlich"
   },
-  "folderNamePlaceholder": {
-    "message": "Enter folder name"
+  "pxmzvk": {
+    "message": "Ordner umbenennen"
   },
-  "folderNameRequired": {
-    "message": "Folder name is required"
+  "mvzxkp": {
+    "message": "Bitte neuen Namen eingeben"
   },
-  "editFolderName": {
-    "message": "Edit Folder Name"
+  "kpvzmx": {
+    "message": "Ordnername existiert bereits"
   },
-  "newNamePlaceholder": {
-    "message": "Enter new name"
+  "xzvkpm": {
+    "message": "Erfolgreich erstellt"
   },
-  "folderNameExists": {
-    "message": "Folder name already exists"
+  "vmkxpz": {
+    "message": "Erfolgreich aktualisiert"
   },
-  "folderCreated": {
-    "message": "Folder created successfully"
+  "zpxmkv": {
+    "message": "Ordner nicht gefunden"
   },
-  "folderUpdated": {
-    "message": "Folder updated successfully"
+  "kvpzmx": {
+    "message": "Ordner gelöscht"
   },
-  "editFailed": {
-    "message": "Edit failed"
+  "mxkvzp": {
+    "message": "Löschen fehlgeschlagen"
   },
-  "folderNotFound": {
-    "message": "Folder not found"
+  "pzvkmx": {
+    "message": "Erfolgreich verschoben"
   },
-  "folderDeleted": {
-    "message": "Folder deleted successfully"
-  },
-  "deleteFailed": {
-    "message": "Delete failed"
-  },
-  "updated": {
-    "message": "Updated"
-  },
-  "createFolderFirst": {
-    "message": "Please create a folder first"
-  },
-  "selectTargetFolder": {
-    "message": "Select target folder (enter number):\n0. Uncategorized\n"
-  },
-  "invalidSelection": {
-    "message": "Invalid selection"
-  },
-  "moved": {
-    "message": "Moved successfully"
-  },
-  "move": {
+  "vxkpmz": {
     "message": "Verschieben nach"
   },
-  "copyLink": {
-    "message": "Copy Link"
+  "wjxnkp": {
+    "message": "Ordner「{folderName}」löschen?\n\nDieser Ordner und seine Unterordner enthalten {count} gespeicherte Elemente. Diese werden in den Standardordner verschoben."
   },
-  "moveFailed": {
-    "message": "Move failed"
+  "qzmvkx": {
+    "message": "Sind Sie sicher, dass Sie den Ordner「{folderName}」löschen möchten?"
   },
-  "confirmDeleteFolder": {
-    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  "mvkzpx": {
+    "message": "Gespeicherte durchsuchen..."
   },
-  "uncategorized": {
-    "message": "Uncategorized"
+  "kxzpmv": {
+    "message": "Speichern in"
   },
-  "confirmDeleteEmptyFolder": {
-    "message": "Sind Sie sicher, dass Sie den Ordner «{folderName}» löschen möchten?"
+  "vmzpkx": {
+    "message": "Standardordner"
   },
-  "searchStarred": {
-    "message": "Favoriten durchsuchen..."
+  "pkmvxz": {
+    "message": "Titel"
+  },
+  "pxkmvz": {
+    "message": "Zeitleiste"
+  },
+  "mzkvxp": {
+    "message": "Wenn aktiviert, wird eine interaktive Zeitleiste auf der rechten Seite der AI-Seite angezeigt."
+  },
+  "vkpmzx": {
+    "message": "Tastatur ↑ / ↓ Tasten zum Navigieren verwenden"
+  },
+  "xpvmkz": {
+    "message": "Wenn aktiviert, verwenden Sie Tastatur ↑ / ↓ Tasten, um schnell zwischen Gesprächsaufzeichnungen zu springen."
+  },
+  "xmvkpz": {
+    "message": "Gesprächseingabefeld"
+  },
+  "kvzmxp": {
+    "message": "Tastatur Enter-Taste für neue Zeile"
+  },
+  "mxpzvk": {
+    "message": "Wenn aktiviert, drücken Sie im AI-Gesprächseingabefeld Enter-Taste einmal für eine neue Zeile, zweimal schnell um Nachricht zu senden."
+  },
+  "kpxvmz": {
+    "message": "Formel kopieren"
+  },
+  "zmkvpx": {
+    "message": "LaTeX-Formel kopieren"
+  },
+  "vxkpzm": {
+    "message": "Wenn aktiviert, werden Formeln auf der Seite automatisch erkannt und können durch Klicken im LaTeX-Format kopiert werden."
+  },
+  "mkvzpx": {
+    "message": "Unterstützte Plattformen"
+  },
+  "zpkmvx": {
+    "message": "Enter für neue Zeile"
+  },
+  "vxmkpz": {
+    "message": "Enter-Taste: Einmal für neue Zeile, doppelt zum Senden"
+  },
+  "mkpxvz": {
+    "message": "Wenn aktiviert, drücken Sie im AI-Gesprächseingabefeld Enter-Taste einmal für eine neue Zeile, zweimal schnell um Nachricht zu senden."
+  },
+  "zpvmkx": {
+    "message": "Speichern fehlgeschlagen"
   }
 }
+
