--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -1,182 +1,195 @@
 {
   "extName": {
-    "message": "AI Timeline - Chronologie interactive pour les conversations IA, copie facile de LaTeX"
+    "message": "AI Timeline : Copier LaTeX, timeline, Entrée nouvelle ligne, mémo prompt"
   },
   "extDescription": {
-    "message": "Transformez vos conversations IA en chronologies interactives. 🚀Aperçu rapide et navigation, 📌Marquer les nœuds de conversation, ⭐️Mettre en favoris les pages de chat, ❤️Copier les formules LaTeX, doublez votre efficacité !"
+    "message": "Pour ChatGPT, DeepSeek, Gemini, Grok et plus de modèles. L'outil de collaboration IA le plus puissant, doublez votre efficacité IA !"
   },
-  "viewStarred": {
-    "message": "Voir les favoris"
+  "qwxpzm": {
+    "message": "Enregistrer"
   },
-  "starredList": {
-    "message": "Mes Favoris"
+  "hkjvnr": {
+    "message": "Voir les enregistrements"
   },
-  "close": {
-    "message": "Fermer"
+  "zmvkpx": {
+    "message": "Enregistrer la conversation"
   },
-  "unstarSuccess": {
-    "message": "Unstarred"
+  "bpxjkw": {
+    "message": "Retirer des enregistrements"
   },
-  "unstarFailed": {
-    "message": "Failed to unstar"
+  "vnkxpm": {
+    "message": "Liste des enregistrements"
   },
-  "starSuccess": {
-    "message": "Starred"
+  "kxpmzv": {
+    "message": "Enregistré avec succès"
   },
-  "noStarredItems": {
-    "message": "Aucun favori"
+  "pzmvkx": {
+    "message": "Retiré des enregistrements"
   },
-  "copied": {
+  "jwvnkp": {
+    "message": "Aucune donnée"
+  },
+  "mvkxpz": {
+    "message": "Copier"
+  },
+  "xpzmvk": {
     "message": "Copié"
   },
-  "copyContent": {
-    "message": "Copy Content"
+  "vkpxzm": {
+    "message": "Modifier"
   },
-  "copyFailed": {
-    "message": "Copy Failed"
+  "kpzmvx": {
+    "message": "Échec de la copie"
   },
-  "starChat": {
-    "message": "Mettre en favoris la page de chat"
-  },
-  "unstarChat": {
-    "message": "Unstar"
-  },
-  "inputChatTheme": {
-    "message": "Entrez le titre du favori:"
-  },
-  "themePlaceholder": {
+  "zmxvkp": {
     "message": "Veuillez saisir"
   },
-  "cancel": {
+  "pxvkmz": {
     "message": "Annuler"
   },
-  "confirm": {
+  "vkmzpx": {
     "message": "Confirmer"
   },
-  "themeRequired": {
+  "mzpxvk": {
     "message": "Le thème ne peut pas être vide"
   },
-  "unstar": {
-    "message": "Retirer des favoris"
+  "xvkpmz": {
+    "message": "Renommer"
   },
-  "viewStarredList": {
-    "message": "Voir la liste des favoris"
-  },
-  "edit": {
-    "message": "Modifier le contenu"
-  },
-  "editStarredContent": {
-    "message": "Modifier le titre du favori"
-  },
-  "contentRequired": {
+  "pzmkvx": {
     "message": "Le contenu ne peut pas être vide"
   },
-  "dataStorageNote": {
-    "message": "Toutes les données stockées localement"
+  "kmvxpz": {
+    "message": "Toutes les données sont stockées localement dans votre navigateur"
   },
-  "projectOpenSource": {
+  "vxpzmk": {
     "message": "Open source, bienvenue"
   },
-  "starOnGitHub": {
-    "message": "Star on GitHub"
+  "mkvxpz": {
+    "message": "Étoile sur GitHub"
   },
-  "shareIfUseful": {
+  "xpzmkv": {
     "message": "Partager avec des amis"
   },
-  "chromeWebStore": {
-    "message": "Chrome Store"
+  "pkmzvx": {
+    "message": "Chrome Web Store"
   },
-  "copyLatexFormula": {
+  "mvxkpz": {
     "message": "Copier la formule LaTeX"
   },
-  "latexFormulaCopied": {
-    "message": "Copié avec succès"
+  "kxvpmz": {
+    "message": "Nouveau dossier"
   },
-  "createFolder": {
-    "message": "Create Folder"
+  "vpmzkx": {
+    "message": "Nouveau sous-dossier"
   },
-  "createSubfolder": {
-    "message": "Create Subfolder"
+  "mzxvkp": {
+    "message": "Supprimer"
   },
-  "delete": {
-    "message": "Delete"
+  "pkxvmz": {
+    "message": "Dossier par défaut"
   },
-  "defaultFolder": {
-    "message": "Default Folder"
+  "xmkvpz": {
+    "message": "Créer un sous-dossier dans「{folderName}」"
   },
-  "createNewFolder": {
-    "message": "Create New Folder"
+  "vzkpmx": {
+    "message": "Veuillez saisir le nom du dossier"
   },
-  "createSubfolderIn": {
-    "message": "Create subfolder in «{folderName}»"
+  "kmxpvz": {
+    "message": "Le nom du dossier est requis"
   },
-  "folderNamePlaceholder": {
-    "message": "Enter folder name"
+  "pxmzvk": {
+    "message": "Renommer le dossier"
   },
-  "folderNameRequired": {
-    "message": "Folder name is required"
+  "mvzxkp": {
+    "message": "Veuillez saisir un nouveau nom"
   },
-  "editFolderName": {
-    "message": "Edit Folder Name"
+  "kpvzmx": {
+    "message": "Le nom du dossier existe déjà"
   },
-  "newNamePlaceholder": {
-    "message": "Enter new name"
+  "xzvkpm": {
+    "message": "Créé avec succès"
   },
-  "folderNameExists": {
-    "message": "Folder name already exists"
+  "vmkxpz": {
+    "message": "Mis à jour avec succès"
   },
-  "folderCreated": {
-    "message": "Folder created successfully"
+  "zpxmkv": {
+    "message": "Dossier introuvable"
   },
-  "folderUpdated": {
-    "message": "Folder updated successfully"
+  "kvpzmx": {
+    "message": "Dossier supprimé"
   },
-  "editFailed": {
-    "message": "Edit failed"
+  "mxkvzp": {
+    "message": "Échec de la suppression"
   },
-  "folderNotFound": {
-    "message": "Folder not found"
+  "pzvkmx": {
+    "message": "Déplacé avec succès"
   },
-  "folderDeleted": {
-    "message": "Folder deleted successfully"
-  },
-  "deleteFailed": {
-    "message": "Delete failed"
-  },
-  "updated": {
-    "message": "Updated"
-  },
-  "createFolderFirst": {
-    "message": "Please create a folder first"
-  },
-  "selectTargetFolder": {
-    "message": "Select target folder (enter number):\n0. Uncategorized\n"
-  },
-  "invalidSelection": {
-    "message": "Invalid selection"
-  },
-  "moved": {
-    "message": "Moved successfully"
-  },
-  "move": {
+  "vxkpmz": {
     "message": "Déplacer vers"
   },
-  "copyLink": {
-    "message": "Copy Link"
+  "wjxnkp": {
+    "message": "Supprimer le dossier「{folderName}」?\n\nCe dossier et ses sous-dossiers contiennent {count} éléments enregistrés. Ils seront déplacés vers le dossier par défaut."
   },
-  "moveFailed": {
-    "message": "Move failed"
+  "qzmvkx": {
+    "message": "Êtes-vous sûr de vouloir supprimer le dossier「{folderName}」?"
   },
-  "confirmDeleteFolder": {
-    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  "mvkzpx": {
+    "message": "Rechercher dans les enregistrements..."
   },
-  "uncategorized": {
-    "message": "Uncategorized"
+  "kxzpmv": {
+    "message": "Enregistrer dans"
   },
-  "confirmDeleteEmptyFolder": {
-    "message": "Êtes-vous sûr de vouloir supprimer le dossier «{folderName}» ?"
+  "vmzpkx": {
+    "message": "Dossier par défaut"
   },
-  "searchStarred": {
-    "message": "Rechercher dans les favoris..."
+  "pkmvxz": {
+    "message": "Titre"
+  },
+  "pxkmvz": {
+    "message": "Chronologie"
+  },
+  "mzkvxp": {
+    "message": "Lorsqu'activé, une chronologie interactive apparaîtra sur le côté droit de la page IA."
+  },
+  "vkpmzx": {
+    "message": "Utiliser les touches clavier ↑ / ↓ pour naviguer dans les conversations"
+  },
+  "xpvmkz": {
+    "message": "Lorsqu'activé, utilisez les touches clavier ↑ / ↓ pour sauter rapidement entre les enregistrements de conversation."
+  },
+  "xmvkpz": {
+    "message": "Zone de saisie de conversation"
+  },
+  "kvzmxp": {
+    "message": "Utiliser la touche Entrée du clavier pour nouvelle ligne"
+  },
+  "mxpzvk": {
+    "message": "Lorsqu'activé, dans la zone de saisie de conversation IA, appuyez touche Entrée une fois pour une nouvelle ligne, deux fois rapidement pour envoyer le message."
+  },
+  "kpxvmz": {
+    "message": "Copier formule"
+  },
+  "zmkvpx": {
+    "message": "Copier formule LaTeX"
+  },
+  "vxkpzm": {
+    "message": "Lorsqu'activé, identifier automatiquement les formules sur la page et cliquer pour copier au format LaTeX."
+  },
+  "mkvzpx": {
+    "message": "Plateformes prises en charge"
+  },
+  "zpkmvx": {
+    "message": "Entrée pour nouvelle ligne"
+  },
+  "vxmkpz": {
+    "message": "Touche Entrée : Une fois pour nouvelle ligne, double pour envoyer"
+  },
+  "mkpxvz": {
+    "message": "Lorsqu'activé, dans la zone de saisie de conversation IA, appuyez touche Entrée une fois pour une nouvelle ligne, deux fois rapidement pour envoyer le message."
+  },
+  "zpvmkx": {
+    "message": "Échec de l'enregistrement"
   }
 }
+
