--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -1,182 +1,195 @@
 {
   "extName": {
-    "message": "AI Timeline - AI वार्तालापों के लिए इंटरैक्टिव टाइमलाइन, आसान LaTeX कॉपी करना"
+    "message": "AI Timeline: LaTeX कॉपी, टाइमलाइन, Enter नई लाइन, प्रॉम्प्ट मेमो"
   },
   "extDescription": {
-    "message": "अपने AI वार्तालापों को इंटरैक्टिव टाइमलाइन में बदलें। 🚀त्वरित पूर्वावलोकन और नेविगेशन, 📌वार्तालाप नोड्स को चिह्नित करें, ⭐️चैट पृष्ठों को चिह्नित करें, ❤️LaTeX सूत्रों की प्रतिलिपि बनाएँ, अपनी दक्षता दोगुनी करें!"
+    "message": "ChatGPT, DeepSeek, Gemini, Grok और अधिक मॉडल के लिए। सबसे शक्तिशाली AI सहयोग उपकरण, अपनी AI कार्य दक्षता दोगुनी करें!"
   },
-  "viewStarred": {
-    "message": "पसंदीदा देखें"
+  "qwxpzm": {
+    "message": "सहेजें"
   },
-  "starredList": {
-    "message": "मेरी पसंदीदा"
+  "hkjvnr": {
+    "message": "सहेजे गए देखें"
   },
-  "close": {
-    "message": "बंद करें"
+  "zmvkpx": {
+    "message": "बातचीत सहेजें"
   },
-  "unstarSuccess": {
-    "message": "Unstarred"
+  "bpxjkw": {
+    "message": "सहेजे गए से हटाएं"
   },
-  "unstarFailed": {
-    "message": "Failed to unstar"
+  "vnkxpm": {
+    "message": "सहेजी गई सूची"
   },
-  "starSuccess": {
-    "message": "Starred"
+  "kxpmzv": {
+    "message": "सफलतापूर्वक सहेजा गया"
   },
-  "noStarredItems": {
-    "message": "कोई पसंदीदा नहीं"
+  "pzmvkx": {
+    "message": "सहेजे गए से हटा दिया गया"
   },
-  "copied": {
+  "jwvnkp": {
+    "message": "कोई डेटा नहीं"
+  },
+  "mvkxpz": {
+    "message": "कॉपी करें"
+  },
+  "xpzmvk": {
     "message": "कॉपी किया गया"
   },
-  "copyContent": {
-    "message": "Copy Content"
+  "vkpxzm": {
+    "message": "संपादित करें"
   },
-  "copyFailed": {
-    "message": "Copy Failed"
+  "kpzmvx": {
+    "message": "कॉपी विफल रहा"
   },
-  "starChat": {
-    "message": "चैट पृष्ठ को चिह्नित करें"
+  "zmxvkp": {
+    "message": "कृपया दर्ज करें"
   },
-  "unstarChat": {
-    "message": "Unstar"
-  },
-  "inputChatTheme": {
-    "message": "पसंदीदा शीर्षक दर्ज करें:"
-  },
-  "themePlaceholder": {
-    "message": "दर्ज करें"
-  },
-  "cancel": {
+  "pxvkmz": {
     "message": "रद्द करें"
   },
-  "confirm": {
+  "vkmzpx": {
     "message": "पुष्टि करें"
   },
-  "themeRequired": {
-    "message": "थीम खाली नहीं हो सकती"
+  "mzpxvk": {
+    "message": "विषय खाली नहीं हो सकता"
   },
-  "unstar": {
-    "message": "पसंदीदा से हटाएं"
+  "xvkpmz": {
+    "message": "नाम बदलें"
   },
-  "viewStarredList": {
-    "message": "पसंदीदा सूची देखें"
-  },
-  "edit": {
-    "message": "सामग्री संपादित करें"
-  },
-  "editStarredContent": {
-    "message": "पसंदीदा शीर्षक संपादित करें"
-  },
-  "contentRequired": {
+  "pzmkvx": {
     "message": "सामग्री खाली नहीं हो सकती"
   },
-  "dataStorageNote": {
-    "message": "सभी डेटा स्थानीय रूप से संग्रहीत"
+  "kmvxpz": {
+    "message": "सभी डेटा आपके ब्राउज़र में स्थानीय रूप से संग्रहीत है"
   },
-  "projectOpenSource": {
+  "vxpzmk": {
     "message": "ओपन सोर्स, स्वागत है"
   },
-  "starOnGitHub": {
-    "message": "Star on GitHub"
+  "mkvxpz": {
+    "message": "GitHub पर स्टार"
   },
-  "shareIfUseful": {
+  "xpzmkv": {
     "message": "दोस्तों के साथ साझा करें"
   },
-  "chromeWebStore": {
-    "message": "Chrome Store"
+  "pkmzvx": {
+    "message": "Chrome वेब स्टोर"
   },
-  "copyLatexFormula": {
+  "mvxkpz": {
     "message": "LaTeX सूत्र कॉपी करें"
   },
-  "latexFormulaCopied": {
-    "message": "सफलतापूर्वक कॉपी किया गया"
+  "kxvpmz": {
+    "message": "नया फ़ोल्डर"
   },
-  "createFolder": {
-    "message": "Create Folder"
+  "vpmzkx": {
+    "message": "नया उप-फ़ोल्डर"
   },
-  "createSubfolder": {
-    "message": "Create Subfolder"
+  "mzxvkp": {
+    "message": "हटाएं"
   },
-  "delete": {
-    "message": "Delete"
+  "pkxvmz": {
+    "message": "डिफ़ॉल्ट फ़ोल्डर"
   },
-  "defaultFolder": {
-    "message": "Default Folder"
+  "xmkvpz": {
+    "message": "「{folderName}」में उप-फ़ोल्डर बनाएं"
   },
-  "createNewFolder": {
-    "message": "Create New Folder"
+  "vzkpmx": {
+    "message": "कृपया फ़ोल्डर नाम दर्ज करें"
   },
-  "createSubfolderIn": {
-    "message": "Create subfolder in «{folderName}»"
+  "kmxpvz": {
+    "message": "फ़ोल्डर नाम आवश्यक है"
   },
-  "folderNamePlaceholder": {
-    "message": "Enter folder name"
+  "pxmzvk": {
+    "message": "फ़ोल्डर नाम बदलें"
   },
-  "folderNameRequired": {
-    "message": "Folder name is required"
+  "mvzxkp": {
+    "message": "कृपया नया नाम दर्ज करें"
   },
-  "editFolderName": {
-    "message": "Edit Folder Name"
+  "kpvzmx": {
+    "message": "फ़ोल्डर नाम पहले से मौजूद है"
   },
-  "newNamePlaceholder": {
-    "message": "Enter new name"
+  "xzvkpm": {
+    "message": "सफलतापूर्वक बनाया गया"
   },
-  "folderNameExists": {
-    "message": "Folder name already exists"
+  "vmkxpz": {
+    "message": "सफलतापूर्वक अपडेट किया गया"
   },
-  "folderCreated": {
-    "message": "Folder created successfully"
+  "zpxmkv": {
+    "message": "फ़ोल्डर नहीं मिला"
   },
-  "folderUpdated": {
-    "message": "Folder updated successfully"
+  "kvpzmx": {
+    "message": "फ़ोल्डर हटा दिया गया"
   },
-  "editFailed": {
-    "message": "Edit failed"
+  "mxkvzp": {
+    "message": "हटाना विफल रहा"
   },
-  "folderNotFound": {
-    "message": "Folder not found"
+  "pzvkmx": {
+    "message": "सफलतापूर्वक स्थानांतरित किया गया"
   },
-  "folderDeleted": {
-    "message": "Folder deleted successfully"
+  "vxkpmz": {
+    "message": "स्थानांतरित करें"
   },
-  "deleteFailed": {
-    "message": "Delete failed"
+  "wjxnkp": {
+    "message": "फ़ोल्डर「{folderName}」हटाएं?\n\nइस फ़ोल्डर और इसके उप-फ़ोल्डर में {count} सहेजी गई आइटम हैं। इन्हें डिफ़ॉल्ट फ़ोल्डर में स्थानांतरित किया जाएगा।"
   },
-  "updated": {
-    "message": "Updated"
+  "qzmvkx": {
+    "message": "क्या आप वाकई फ़ोल्डर「{folderName}」हटाना चाहते हैं?"
   },
-  "createFolderFirst": {
-    "message": "Please create a folder first"
+  "mvkzpx": {
+    "message": "सहेजे गए में खोजें..."
   },
-  "selectTargetFolder": {
-    "message": "Select target folder (enter number):\n0. Uncategorized\n"
+  "kxzpmv": {
+    "message": "में सहेजें"
   },
-  "invalidSelection": {
-    "message": "Invalid selection"
+  "vmzpkx": {
+    "message": "डिफ़ॉल्ट फ़ोल्डर"
   },
-  "moved": {
-    "message": "Moved successfully"
+  "pkmvxz": {
+    "message": "शीर्षक"
   },
-  "move": {
-    "message": "यहां ले जाएं"
+  "pxkmvz": {
+    "message": "टाइमलाइन"
   },
-  "copyLink": {
-    "message": "Copy Link"
+  "mzkvxp": {
+    "message": "सक्षम होने पर, AI पृष्ठ के दाईं ओर एक इंटरैक्टिव टाइमलाइन दिखाई देगी।"
   },
-  "moveFailed": {
-    "message": "Move failed"
+  "vkpmzx": {
+    "message": "वार्तालाप नेविगेट करने के लिए कीबोर्ड ↑ / ↓ कुंजी का उपयोग करें"
   },
-  "confirmDeleteFolder": {
-    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  "xpvmkz": {
+    "message": "सक्षम होने पर, वार्तालाप रिकॉर्ड के बीच तेज़ी से जाने के लिए कीबोर्ड ↑ / ↓ कुंजी का उपयोग करें।"
   },
-  "uncategorized": {
-    "message": "Uncategorized"
+  "xmvkpz": {
+    "message": "वार्तालाप इनपुट बॉक्स"
   },
-  "confirmDeleteEmptyFolder": {
-    "message": "क्या आप वाकई फ़ोल्डर «{folderName}» को हटाना चाहते हैं?"
+  "kvzmxp": {
+    "message": "नई लाइन के लिए कीबोर्ड Enter कुंजी का उपयोग करें"
   },
-  "searchStarred": {
-    "message": "पसंदीदा खोजें..."
+  "mxpzvk": {
+    "message": "सक्षम होने पर, AI वार्तालाप इनपुट बॉक्स में, नई लाइन के लिए Enter कुंजी को एक बार दबाएं, संदेश भेजने के लिए तेज़ी से दो बार दबाएं।"
+  },
+  "kpxvmz": {
+    "message": "सूत्र कॉपी करें"
+  },
+  "zmkvpx": {
+    "message": "LaTeX सूत्र कॉपी करें"
+  },
+  "vxkpzm": {
+    "message": "सक्षम होने पर, पृष्ठ पर सूत्रों को स्वचालित रूप से पहचानें और LaTeX प्रारूप में कॉपी करने के लिए क्लिक करें।"
+  },
+  "mkvzpx": {
+    "message": "समर्थित प्लेटफ़ॉर्म"
+  },
+  "zpkmvx": {
+    "message": "नई लाइन के लिए Enter दबाएं"
+  },
+  "vxmkpz": {
+    "message": "Enter कुंजी: एक बार नई लाइन, दो बार भेजें"
+  },
+  "mkpxvz": {
+    "message": "सक्षम होने पर, AI वार्तालाप इनपुट बॉक्स में, नई लाइन के लिए Enter कुंजी को एक बार दबाएं, संदेश भेजने के लिए तेज़ी से दो बार दबाएं।"
+  },
+  "zpvmkx": {
+    "message": "सहेजना विफल रहा"
   }
 }
+
