--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -1,182 +1,195 @@
 {
   "extName": {
-    "message": "AI Timeline - Timeline interattiva per conversazioni AI, copia facile di LaTeX"
+    "message": "AI Timeline: Copia LaTeX, timeline, Invio per nuova riga, memo dei prompt"
   },
   "extDescription": {
-    "message": "Trasforma le tue conversazioni AI in timeline interattive. 🚀Anteprima rapida e navigazione, 📌Segna i nodi di conversazione, ⭐️Segna pagine di chat, ❤️Copia formule LaTeX, raddoppia la tua efficienza!"
+    "message": "Per ChatGPT, DeepSeek, Gemini, Grok e altri modelli. Lo strumento di collaborazione AI più potente, raddoppia la tua efficienza AI!"
   },
-  "viewStarred": {
-    "message": "Visualizza preferiti"
+  "qwxpzm": {
+    "message": "Salva"
   },
-  "starredList": {
-    "message": "I Miei Preferiti"
+  "hkjvnr": {
+    "message": "Visualizza salvati"
   },
-  "close": {
-    "message": "Chiudi"
+  "zmvkpx": {
+    "message": "Salva conversazione"
   },
-  "unstarSuccess": {
-    "message": "Unstarred"
+  "bpxjkw": {
+    "message": "Rimuovi dai salvati"
   },
-  "unstarFailed": {
-    "message": "Failed to unstar"
+  "vnkxpm": {
+    "message": "Elenco salvati"
   },
-  "starSuccess": {
-    "message": "Starred"
+  "kxpmzv": {
+    "message": "Salvato con successo"
   },
-  "noStarredItems": {
-    "message": "Nessun preferito"
+  "pzmvkx": {
+    "message": "Rimosso dai salvati"
   },
-  "copied": {
+  "jwvnkp": {
+    "message": "Nessun dato"
+  },
+  "mvkxpz": {
+    "message": "Copia"
+  },
+  "xpzmvk": {
     "message": "Copiato"
   },
-  "copyContent": {
-    "message": "Copy Content"
+  "vkpxzm": {
+    "message": "Modifica"
   },
-  "copyFailed": {
-    "message": "Copy Failed"
+  "kpzmvx": {
+    "message": "Copia fallita"
   },
-  "starChat": {
-    "message": "Segna pagina di chat"
-  },
-  "unstarChat": {
-    "message": "Unstar"
-  },
-  "inputChatTheme": {
-    "message": "Inserisci il titolo del preferito:"
-  },
-  "themePlaceholder": {
+  "zmxvkp": {
     "message": "Inserisci"
   },
-  "cancel": {
+  "pxvkmz": {
     "message": "Annulla"
   },
-  "confirm": {
+  "vkmzpx": {
     "message": "Conferma"
   },
-  "themeRequired": {
+  "mzpxvk": {
     "message": "Il tema non può essere vuoto"
   },
-  "unstar": {
-    "message": "Rimuovi dai preferiti"
+  "xvkpmz": {
+    "message": "Rinomina"
   },
-  "viewStarredList": {
-    "message": "Visualizza elenco preferiti"
-  },
-  "edit": {
-    "message": "Modifica contenuto"
-  },
-  "editStarredContent": {
-    "message": "Modifica titolo preferito"
-  },
-  "contentRequired": {
+  "pzmkvx": {
     "message": "Il contenuto non può essere vuoto"
   },
-  "dataStorageNote": {
-    "message": "Tutti i dati memorizzati localmente"
+  "kmvxpz": {
+    "message": "Tutti i dati sono memorizzati localmente nel tuo browser"
   },
-  "projectOpenSource": {
+  "vxpzmk": {
     "message": "Open source, benvenuto"
   },
-  "starOnGitHub": {
-    "message": "Star on GitHub"
+  "mkvxpz": {
+    "message": "Stella su GitHub"
   },
-  "shareIfUseful": {
-    "message": "Condividi con amici"
+  "xpzmkv": {
+    "message": "Condividi con gli amici"
   },
-  "chromeWebStore": {
-    "message": "Chrome Store"
+  "pkmzvx": {
+    "message": "Chrome Web Store"
   },
-  "copyLatexFormula": {
+  "mvxkpz": {
     "message": "Copia formula LaTeX"
   },
-  "latexFormulaCopied": {
-    "message": "Copiato con successo"
+  "kxvpmz": {
+    "message": "Nuova cartella"
   },
-  "createFolder": {
-    "message": "Create Folder"
+  "vpmzkx": {
+    "message": "Nuova sottocartella"
   },
-  "createSubfolder": {
-    "message": "Create Subfolder"
+  "mzxvkp": {
+    "message": "Elimina"
   },
-  "delete": {
-    "message": "Delete"
+  "pkxvmz": {
+    "message": "Cartella predefinita"
   },
-  "defaultFolder": {
-    "message": "Default Folder"
+  "xmkvpz": {
+    "message": "Crea sottocartella in「{folderName}」"
   },
-  "createNewFolder": {
-    "message": "Create New Folder"
+  "vzkpmx": {
+    "message": "Inserisci il nome della cartella"
   },
-  "createSubfolderIn": {
-    "message": "Create subfolder in «{folderName}»"
+  "kmxpvz": {
+    "message": "Il nome della cartella è obbligatorio"
   },
-  "folderNamePlaceholder": {
-    "message": "Enter folder name"
+  "pxmzvk": {
+    "message": "Rinomina cartella"
   },
-  "folderNameRequired": {
-    "message": "Folder name is required"
+  "mvzxkp": {
+    "message": "Inserisci un nuovo nome"
   },
-  "editFolderName": {
-    "message": "Edit Folder Name"
+  "kpvzmx": {
+    "message": "Il nome della cartella esiste già"
   },
-  "newNamePlaceholder": {
-    "message": "Enter new name"
+  "xzvkpm": {
+    "message": "Creata con successo"
   },
-  "folderNameExists": {
-    "message": "Folder name already exists"
+  "vmkxpz": {
+    "message": "Aggiornata con successo"
   },
-  "folderCreated": {
-    "message": "Folder created successfully"
+  "zpxmkv": {
+    "message": "Cartella non trovata"
   },
-  "folderUpdated": {
-    "message": "Folder updated successfully"
+  "kvpzmx": {
+    "message": "Cartella eliminata"
   },
-  "editFailed": {
-    "message": "Edit failed"
+  "mxkvzp": {
+    "message": "Eliminazione fallita"
   },
-  "folderNotFound": {
-    "message": "Folder not found"
+  "pzvkmx": {
+    "message": "Spostata con successo"
   },
-  "folderDeleted": {
-    "message": "Folder deleted successfully"
-  },
-  "deleteFailed": {
-    "message": "Delete failed"
-  },
-  "updated": {
-    "message": "Updated"
-  },
-  "createFolderFirst": {
-    "message": "Please create a folder first"
-  },
-  "selectTargetFolder": {
-    "message": "Select target folder (enter number):\n0. Uncategorized\n"
-  },
-  "invalidSelection": {
-    "message": "Invalid selection"
-  },
-  "moved": {
-    "message": "Moved successfully"
-  },
-  "move": {
+  "vxkpmz": {
     "message": "Sposta in"
   },
-  "copyLink": {
-    "message": "Copy Link"
+  "wjxnkp": {
+    "message": "Eliminare la cartella「{folderName}」?\n\nQuesta cartella e le sue sottocartelle contengono {count} elementi salvati. Verranno spostati nella cartella predefinita."
   },
-  "moveFailed": {
-    "message": "Move failed"
+  "qzmvkx": {
+    "message": "Sei sicuro di voler eliminare la cartella「{folderName}」?"
   },
-  "confirmDeleteFolder": {
-    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  "mvkzpx": {
+    "message": "Cerca nei salvati..."
   },
-  "uncategorized": {
-    "message": "Uncategorized"
+  "kxzpmv": {
+    "message": "Salva in"
   },
-  "confirmDeleteEmptyFolder": {
-    "message": "Sei sicuro di voler eliminare la cartella «{folderName}»?"
+  "vmzpkx": {
+    "message": "Cartella predefinita"
   },
-  "searchStarred": {
-    "message": "Cerca preferiti..."
+  "pkmvxz": {
+    "message": "Titolo"
+  },
+  "pxkmvz": {
+    "message": "Timeline"
+  },
+  "mzkvxp": {
+    "message": "Quando attivato, apparirà una timeline interattiva sul lato destro della pagina AI."
+  },
+  "vkpmzx": {
+    "message": "Usa i tasti tastiera ↑ / ↓ per navigare tra le conversazioni"
+  },
+  "xpvmkz": {
+    "message": "Quando attivato, usa i tasti tastiera ↑ / ↓ per saltare rapidamente tra i record di conversazione."
+  },
+  "xmvkpz": {
+    "message": "Casella di input conversazione"
+  },
+  "kvzmxp": {
+    "message": "Usa il tasto Invio della tastiera per nuova riga"
+  },
+  "mxpzvk": {
+    "message": "Quando attivato, nella casella di input conversazione AI, premi tasto Invio una volta per una nuova riga, due volte rapidamente per inviare il messaggio."
+  },
+  "kpxvmz": {
+    "message": "Copia formula"
+  },
+  "zmkvpx": {
+    "message": "Copia formula LaTeX"
+  },
+  "vxkpzm": {
+    "message": "Quando attivato, identifica automaticamente le formule sulla pagina e fai clic per copiare in formato LaTeX."
+  },
+  "mkvzpx": {
+    "message": "Piattaforme supportate"
+  },
+  "zpkmvx": {
+    "message": "Invio per nuova riga"
+  },
+  "vxmkpz": {
+    "message": "Tasto Invio: Una volta per nuova riga, doppio per inviare"
+  },
+  "mkpxvz": {
+    "message": "Quando attivato, nella casella di input conversazione AI, premi tasto Invio una volta per una nuova riga, due volte rapidamente per inviare il messaggio."
+  },
+  "zpvmkx": {
+    "message": "Salvataggio fallito"
   }
 }
+
