--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -1,182 +1,195 @@
 {
   "extName": {
-    "message": "AI Timeline - AI 대화용 인터랙티브 타임라인, 간편한 LaTeX 복사"
+    "message": "AI Timeline: LaTeX 복사, 타임라인, Enter로 줄바꿈, 프롬프트 메모"
   },
   "extDescription": {
-    "message": "AI 대화를 인터랙티브 타임라인으로 변환합니다. 🚀빠른 미리보기 및 이동, 📌대화 노드 표시, ⭐️채팅 페이지 스타, ❤️LaTeX 수식 복사, 효율성 두 배 향상!"
+    "message": "ChatGPT, DeepSeek, Gemini, Grok 등 모든 주류 AI 모델 지원. 가장 강력한 AI 협업 도구로 AI 작업 효율을 두 배로!"
   },
-  "viewStarred": {
-    "message": "즐겨찾기 보기"
+  "qwxpzm": {
+    "message": "저장"
   },
-  "starredList": {
-    "message": "내 즐겨찾기"
+  "hkjvnr": {
+    "message": "저장된 항목 보기"
   },
-  "close": {
-    "message": "닫기"
+  "zmvkpx": {
+    "message": "대화 저장"
   },
-  "unstarSuccess": {
-    "message": "Unstarred"
+  "bpxjkw": {
+    "message": "저장 취소"
   },
-  "unstarFailed": {
-    "message": "Failed to unstar"
+  "vnkxpm": {
+    "message": "저장 목록"
   },
-  "starSuccess": {
-    "message": "Starred"
+  "kxpmzv": {
+    "message": "저장 완료"
   },
-  "noStarredItems": {
-    "message": "즐겨찾기 없음"
+  "pzmvkx": {
+    "message": "저장이 취소되었습니다"
   },
-  "copied": {
+  "jwvnkp": {
+    "message": "데이터 없음"
+  },
+  "mvkxpz": {
+    "message": "복사"
+  },
+  "xpzmvk": {
     "message": "복사됨"
   },
-  "copyContent": {
-    "message": "Copy Content"
+  "vkpxzm": {
+    "message": "편집"
   },
-  "copyFailed": {
-    "message": "Copy Failed"
+  "kpzmvx": {
+    "message": "복사 실패"
   },
-  "starChat": {
-    "message": "채팅 페이지 스타"
-  },
-  "unstarChat": {
-    "message": "Unstar"
-  },
-  "inputChatTheme": {
-    "message": "즐겨찾기 제목 입력："
-  },
-  "themePlaceholder": {
+  "zmxvkp": {
     "message": "입력하세요"
   },
-  "cancel": {
+  "pxvkmz": {
     "message": "취소"
   },
-  "confirm": {
+  "vkmzpx": {
     "message": "확인"
   },
-  "themeRequired": {
-    "message": "주제를 입력해야 합니다"
+  "mzpxvk": {
+    "message": "제목은 비워둘 수 없습니다"
   },
-  "unstar": {
-    "message": "즐겨찾기 취소"
+  "xvkpmz": {
+    "message": "이름 바꾸기"
   },
-  "viewStarredList": {
-    "message": "즐겨찾기 목록 보기"
+  "pzmkvx": {
+    "message": "내용은 비워둘 수 없습니다"
   },
-  "edit": {
-    "message": "내용 편집"
+  "kmvxpz": {
+    "message": "모든 데이터는 브라우저에 로컬로 저장됩니다"
   },
-  "editStarredContent": {
-    "message": "즐겨찾기 제목 편집"
-  },
-  "contentRequired": {
-    "message": "내용을 입력해야 합니다"
-  },
-  "dataStorageNote": {
-    "message": "모든 데이터가 브라우저에 로컬 저장됨"
-  },
-  "projectOpenSource": {
+  "vxpzmk": {
     "message": "오픈 소스, 환영합니다"
   },
-  "starOnGitHub": {
-    "message": "Star on GitHub"
+  "mkvxpz": {
+    "message": "GitHub에서 스타"
   },
-  "shareIfUseful": {
+  "xpzmkv": {
     "message": "친구와 공유"
   },
-  "chromeWebStore": {
-    "message": "Chrome 스토어"
+  "pkmzvx": {
+    "message": "Chrome 웹 스토어"
   },
-  "copyLatexFormula": {
+  "mvxkpz": {
     "message": "LaTeX 수식 복사"
   },
-  "latexFormulaCopied": {
-    "message": "복사 완료"
+  "kxvpmz": {
+    "message": "새 폴더"
   },
-  "createFolder": {
-    "message": "Create Folder"
+  "vpmzkx": {
+    "message": "새 하위 폴더"
   },
-  "createSubfolder": {
-    "message": "Create Subfolder"
+  "mzxvkp": {
+    "message": "삭제"
   },
-  "delete": {
-    "message": "Delete"
+  "pkxvmz": {
+    "message": "기본 폴더"
   },
-  "defaultFolder": {
-    "message": "Default Folder"
+  "xmkvpz": {
+    "message": "「{folderName}」에 하위 폴더 만들기"
   },
-  "createNewFolder": {
-    "message": "Create New Folder"
+  "vzkpmx": {
+    "message": "폴더 이름을 입력하세요"
   },
-  "createSubfolderIn": {
-    "message": "Create subfolder in «{folderName}»"
+  "kmxpvz": {
+    "message": "폴더 이름은 필수입니다"
   },
-  "folderNamePlaceholder": {
-    "message": "Enter folder name"
+  "pxmzvk": {
+    "message": "폴더 이름 바꾸기"
   },
-  "folderNameRequired": {
-    "message": "Folder name is required"
+  "mvzxkp": {
+    "message": "새 이름을 입력하세요"
   },
-  "editFolderName": {
-    "message": "Edit Folder Name"
+  "kpvzmx": {
+    "message": "폴더 이름이 이미 존재합니다"
   },
-  "newNamePlaceholder": {
-    "message": "Enter new name"
+  "xzvkpm": {
+    "message": "생성 완료"
   },
-  "folderNameExists": {
-    "message": "Folder name already exists"
+  "vmkxpz": {
+    "message": "업데이트 완료"
   },
-  "folderCreated": {
-    "message": "Folder created successfully"
+  "zpxmkv": {
+    "message": "폴더를 찾을 수 없습니다"
   },
-  "folderUpdated": {
-    "message": "Folder updated successfully"
+  "kvpzmx": {
+    "message": "폴더가 삭제되었습니다"
   },
-  "editFailed": {
-    "message": "Edit failed"
+  "mxkvzp": {
+    "message": "삭제 실패"
   },
-  "folderNotFound": {
-    "message": "Folder not found"
+  "pzvkmx": {
+    "message": "이동 완료"
   },
-  "folderDeleted": {
-    "message": "Folder deleted successfully"
-  },
-  "deleteFailed": {
-    "message": "Delete failed"
-  },
-  "updated": {
-    "message": "Updated"
-  },
-  "createFolderFirst": {
-    "message": "Please create a folder first"
-  },
-  "selectTargetFolder": {
-    "message": "Select target folder (enter number):\n0. Uncategorized\n"
-  },
-  "invalidSelection": {
-    "message": "Invalid selection"
-  },
-  "moved": {
-    "message": "Moved successfully"
-  },
-  "move": {
+  "vxkpmz": {
     "message": "이동 대상"
   },
-  "copyLink": {
-    "message": "Copy Link"
+  "wjxnkp": {
+    "message": "폴더「{folderName}」을(를) 삭제하시겠습니까?\n\n이 폴더와 하위 폴더에는 {count}개의 저장된 항목이 있습니다. 기본 폴더로 이동됩니다."
   },
-  "moveFailed": {
-    "message": "Move failed"
+  "qzmvkx": {
+    "message": "폴더「{folderName}」을(를) 삭제하시겠습니까?"
   },
-  "confirmDeleteFolder": {
-    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  "mvkzpx": {
+    "message": "저장된 항목 검색..."
   },
-  "uncategorized": {
-    "message": "Uncategorized"
+  "kxzpmv": {
+    "message": "저장 위치"
   },
-  "confirmDeleteEmptyFolder": {
-    "message": "폴더 «{folderName}»를 삭제하시겠습니까?"
+  "vmzpkx": {
+    "message": "기본 폴더"
   },
-  "searchStarred": {
-    "message": "즐겨찾기 검색..."
+  "pkmvxz": {
+    "message": "제목"
+  },
+  "pxkmvz": {
+    "message": "타임라인"
+  },
+  "mzkvxp": {
+    "message": "활성화하면 AI 페이지 오른쪽에 상호작용 가능한 타임라인이 표시됩니다."
+  },
+  "vkpmzx": {
+    "message": "키보드 ↑ / ↓ 키로 대화 탐색"
+  },
+  "xpvmkz": {
+    "message": "활성화하면 키보드 ↑ / ↓ 키로 대화 기록 간에 빠르게 이동할 수 있습니다."
+  },
+  "xmvkpz": {
+    "message": "대화 입력 상자"
+  },
+  "kvzmxp": {
+    "message": "키보드 Enter 키로 줄바꿈"
+  },
+  "mxpzvk": {
+    "message": "활성화하면 AI 대화 입력 상자에서 Enter 키를 한 번 누르면 줄바꿈, 빠르게 두 번 누르면 메시지를 전송합니다."
+  },
+  "kpxvmz": {
+    "message": "수식 복사"
+  },
+  "zmkvpx": {
+    "message": "LaTeX 수식 복사"
+  },
+  "vxkpzm": {
+    "message": "활성화하면 페이지의 수식을 자동으로 식별하고 클릭하여 LaTeX 형식으로 복사할 수 있습니다."
+  },
+  "mkvzpx": {
+    "message": "지원되는 플랫폼"
+  },
+  "zpkmvx": {
+    "message": "Enter로 줄바꿈"
+  },
+  "vxmkpz": {
+    "message": "Enter키: 한 번으로 줄바꿈, 두 번으로 전송"
+  },
+  "mkpxvz": {
+    "message": "활성화하면 AI 대화 입력 상자에서 Enter 키를 한 번 누르면 줄바꿈, 빠르게 두 번 누르면 메시지를 전송합니다."
+  },
+  "zpvmkx": {
+    "message": "저장 실패"
   }
 }
+
