--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -1,182 +1,195 @@
 {
   "extName": {
-    "message": "AI Timeline - Interaktywna oś czasu dla rozmów AI, łatwe kopiowanie LaTeX"
+    "message": "AI Timeline: Kopiuj LaTeX, oś czasu, Enter dla nowej linii, notatka promptu"
   },
   "extDescription": {
-    "message": "Przekształć swoje rozmowy AI w interaktywne osie czasu. 🚀Szybki podgląd i nawigacja, 📌Oznacz węzły rozmowy, ⭐️Oznacz strony czatu, ❤️Kopiuj formuły LaTeX, podwój swoją wydajność!"
+    "message": "Dla ChatGPT, DeepSeek, Gemini, Grok i innych modeli. Najpotężniejsze narzędzie do współpracy z AI, podwój swoją wydajność AI!"
   },
-  "viewStarred": {
-    "message": "Zobacz ulubione"
+  "qwxpzm": {
+    "message": "Zapisz"
   },
-  "starredList": {
-    "message": "Moje Ulubione"
+  "hkjvnr": {
+    "message": "Zobacz zapisane"
   },
-  "close": {
-    "message": "Zamknij"
+  "zmvkpx": {
+    "message": "Zapisz rozmowę"
   },
-  "unstarSuccess": {
-    "message": "Unstarred"
+  "bpxjkw": {
+    "message": "Usuń z zapisanych"
   },
-  "unstarFailed": {
-    "message": "Failed to unstar"
+  "vnkxpm": {
+    "message": "Lista zapisanych"
   },
-  "starSuccess": {
-    "message": "Starred"
+  "kxpmzv": {
+    "message": "Pomyślnie zapisano"
   },
-  "noStarredItems": {
-    "message": "Brak ulubionych"
+  "pzmvkx": {
+    "message": "Usunięto z zapisanych"
   },
-  "copied": {
+  "jwvnkp": {
+    "message": "Brak danych"
+  },
+  "mvkxpz": {
+    "message": "Kopiuj"
+  },
+  "xpzmvk": {
     "message": "Skopiowano"
   },
-  "copyContent": {
-    "message": "Copy Content"
+  "vkpxzm": {
+    "message": "Edytuj"
   },
-  "copyFailed": {
-    "message": "Copy Failed"
+  "kpzmvx": {
+    "message": "Kopiowanie nie powiodło się"
   },
-  "starChat": {
-    "message": "Oznacz stronę czatu"
+  "zmxvkp": {
+    "message": "Proszę wprowadzić"
   },
-  "unstarChat": {
-    "message": "Unstar"
-  },
-  "inputChatTheme": {
-    "message": "Wprowadź tytuł ulubionego:"
-  },
-  "themePlaceholder": {
-    "message": "Wprowadź"
-  },
-  "cancel": {
+  "pxvkmz": {
     "message": "Anuluj"
   },
-  "confirm": {
+  "vkmzpx": {
     "message": "Potwierdź"
   },
-  "themeRequired": {
+  "mzpxvk": {
     "message": "Temat nie może być pusty"
   },
-  "unstar": {
-    "message": "Usuń z ulubionych"
+  "xvkpmz": {
+    "message": "Zmień nazwę"
   },
-  "viewStarredList": {
-    "message": "Zobacz listę ulubionych"
+  "pzmkvx": {
+    "message": "Treść nie może być pusta"
   },
-  "edit": {
-    "message": "Edytuj treść"
+  "kmvxpz": {
+    "message": "Wszystkie dane są przechowywane lokalnie w Twojej przeglądarce"
   },
-  "editStarredContent": {
-    "message": "Edytuj tytuł ulubionego"
-  },
-  "contentRequired": {
-    "message": "Zawartość nie może być pusta"
-  },
-  "dataStorageNote": {
-    "message": "Wszystkie dane przechowywane lokalnie"
-  },
-  "projectOpenSource": {
+  "vxpzmk": {
     "message": "Open source, witamy"
   },
-  "starOnGitHub": {
-    "message": "Star on GitHub"
+  "mkvxpz": {
+    "message": "Gwiazdka na GitHub"
   },
-  "shareIfUseful": {
+  "xpzmkv": {
     "message": "Udostępnij znajomym"
   },
-  "chromeWebStore": {
-    "message": "Chrome Store"
+  "pkmzvx": {
+    "message": "Sklep Chrome"
   },
-  "copyLatexFormula": {
-    "message": "Kopiuj wzór LaTeX"
+  "mvxkpz": {
+    "message": "Kopiuj formułę LaTeX"
   },
-  "latexFormulaCopied": {
-    "message": "Skopiowano pomyślnie"
+  "kxvpmz": {
+    "message": "Nowy folder"
   },
-  "createFolder": {
-    "message": "Create Folder"
+  "vpmzkx": {
+    "message": "Nowy podfolder"
   },
-  "createSubfolder": {
-    "message": "Create Subfolder"
+  "mzxvkp": {
+    "message": "Usuń"
   },
-  "delete": {
-    "message": "Delete"
+  "pkxvmz": {
+    "message": "Domyślny folder"
   },
-  "defaultFolder": {
-    "message": "Default Folder"
+  "xmkvpz": {
+    "message": "Utwórz podfolder w「{folderName}」"
   },
-  "createNewFolder": {
-    "message": "Create New Folder"
+  "vzkpmx": {
+    "message": "Proszę wprowadzić nazwę folderu"
   },
-  "createSubfolderIn": {
-    "message": "Create subfolder in «{folderName}»"
+  "kmxpvz": {
+    "message": "Nazwa folderu jest wymagana"
   },
-  "folderNamePlaceholder": {
-    "message": "Enter folder name"
+  "pxmzvk": {
+    "message": "Zmień nazwę folderu"
   },
-  "folderNameRequired": {
-    "message": "Folder name is required"
+  "mvzxkp": {
+    "message": "Proszę wprowadzić nową nazwę"
   },
-  "editFolderName": {
-    "message": "Edit Folder Name"
+  "kpvzmx": {
+    "message": "Nazwa folderu już istnieje"
   },
-  "newNamePlaceholder": {
-    "message": "Enter new name"
+  "xzvkpm": {
+    "message": "Pomyślnie utworzono"
   },
-  "folderNameExists": {
-    "message": "Folder name already exists"
+  "vmkxpz": {
+    "message": "Pomyślnie zaktualizowano"
   },
-  "folderCreated": {
-    "message": "Folder created successfully"
+  "zpxmkv": {
+    "message": "Folder nie znaleziony"
   },
-  "folderUpdated": {
-    "message": "Folder updated successfully"
+  "kvpzmx": {
+    "message": "Folder usunięty"
   },
-  "editFailed": {
-    "message": "Edit failed"
+  "mxkvzp": {
+    "message": "Usuwanie nie powiodło się"
   },
-  "folderNotFound": {
-    "message": "Folder not found"
+  "pzvkmx": {
+    "message": "Pomyślnie przeniesiono"
   },
-  "folderDeleted": {
-    "message": "Folder deleted successfully"
-  },
-  "deleteFailed": {
-    "message": "Delete failed"
-  },
-  "updated": {
-    "message": "Updated"
-  },
-  "createFolderFirst": {
-    "message": "Please create a folder first"
-  },
-  "selectTargetFolder": {
-    "message": "Select target folder (enter number):\n0. Uncategorized\n"
-  },
-  "invalidSelection": {
-    "message": "Invalid selection"
-  },
-  "moved": {
-    "message": "Moved successfully"
-  },
-  "move": {
+  "vxkpmz": {
     "message": "Przenieś do"
   },
-  "copyLink": {
-    "message": "Copy Link"
+  "wjxnkp": {
+    "message": "Usunąć folder「{folderName}」?\n\nTen folder i jego podfoldery zawierają {count} zapisanych elementów. Zostaną przeniesione do domyślnego folderu."
   },
-  "moveFailed": {
-    "message": "Move failed"
+  "qzmvkx": {
+    "message": "Czy na pewno chcesz usunąć folder「{folderName}」?"
   },
-  "confirmDeleteFolder": {
-    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  "mvkzpx": {
+    "message": "Szukaj w zapisanych..."
   },
-  "uncategorized": {
-    "message": "Uncategorized"
+  "kxzpmv": {
+    "message": "Zapisz w"
   },
-  "confirmDeleteEmptyFolder": {
-    "message": "Czy na pewno chcesz usunąć folder «{folderName}»?"
+  "vmzpkx": {
+    "message": "Domyślny folder"
   },
-  "searchStarred": {
-    "message": "Szukaj w ulubionych..."
+  "pkmvxz": {
+    "message": "Tytuł"
+  },
+  "pxkmvz": {
+    "message": "Oś czasu"
+  },
+  "mzkvxp": {
+    "message": "Po włączeniu interaktywna oś czasu pojawi się po prawej stronie strony AI."
+  },
+  "vkpmzx": {
+    "message": "Użyj klawiszy klawiatury ↑ / ↓ do nawigacji rozmów"
+  },
+  "xpvmkz": {
+    "message": "Po włączeniu użyj klawiszy klawiatury ↑ / ↓, aby szybko przeskakiwać między rekordami rozmów."
+  },
+  "xmvkpz": {
+    "message": "Pole wprowadzania rozmowy"
+  },
+  "kvzmxp": {
+    "message": "Użyj klawisza Enter klawiatury dla nowej linii"
+  },
+  "mxpzvk": {
+    "message": "Po włączeniu, w polu wprowadzania rozmowy AI, naciśnij klawisz Enter raz dla nowej linii, dwa razy szybko, aby wysłać wiadomość."
+  },
+  "kpxvmz": {
+    "message": "Kopiuj formułę"
+  },
+  "zmkvpx": {
+    "message": "Kopiuj formułę LaTeX"
+  },
+  "vxkpzm": {
+    "message": "Po włączeniu automatycznie identyfikuj formuły na stronie i kliknij, aby skopiować w formacie LaTeX."
+  },
+  "mkvzpx": {
+    "message": "Obsługiwane platformy"
+  },
+  "zpkmvx": {
+    "message": "Enter dla nowej linii"
+  },
+  "vxmkpz": {
+    "message": "Klawisz Enter: Raz dla nowej linii, podwójnie aby wysłać"
+  },
+  "mkpxvz": {
+    "message": "Po włączeniu, w polu wprowadzania rozmowy AI, naciśnij klawisz Enter raz dla nowej linii, dwa razy szybko, aby wysłać wiadomość."
+  },
+  "zpvmkx": {
+    "message": "Zapisywanie nie powiodło się"
   }
 }
+
