--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -1,182 +1,195 @@
 {
   "extName": {
-    "message": "AI Timeline - Linha do tempo interativa para conversas de IA, cópia fácil de LaTeX"
+    "message": "AI Timeline: Copiar LaTeX, timeline, Enter nova linha, memo prompt"
   },
   "extDescription": {
-    "message": "Transforme as suas conversas de IA em linhas do tempo interativas. 🚀Visualização rápida e navegação, 📌Marque nós de conversa, ⭐️Marque páginas de chat, ❤️Copie fórmulas LaTeX, duplique a sua eficiência!"
+    "message": "Para ChatGPT, DeepSeek, Gemini, Grok e mais modelos. A mais poderosa ferramenta de colaboração de IA, duplique a sua eficiência de IA!"
   },
-  "viewStarred": {
-    "message": "Ver favoritos"
+  "qwxpzm": {
+    "message": "Guardar"
   },
-  "starredList": {
-    "message": "Os Meus Favoritos"
+  "hkjvnr": {
+    "message": "Ver guardados"
   },
-  "close": {
-    "message": "Fechar"
+  "zmvkpx": {
+    "message": "Guardar conversa"
   },
-  "unstarSuccess": {
-    "message": "Unstarred"
+  "bpxjkw": {
+    "message": "Remover dos guardados"
   },
-  "unstarFailed": {
-    "message": "Failed to unstar"
+  "vnkxpm": {
+    "message": "Lista de guardados"
   },
-  "starSuccess": {
-    "message": "Starred"
+  "kxpmzv": {
+    "message": "Guardado com sucesso"
   },
-  "noStarredItems": {
-    "message": "Sem favoritos"
+  "pzmvkx": {
+    "message": "Removido dos guardados"
   },
-  "copied": {
+  "jwvnkp": {
+    "message": "Sem dados"
+  },
+  "mvkxpz": {
+    "message": "Copiar"
+  },
+  "xpzmvk": {
     "message": "Copiado"
   },
-  "copyContent": {
-    "message": "Copy Content"
+  "vkpxzm": {
+    "message": "Editar"
   },
-  "copyFailed": {
-    "message": "Copy Failed"
+  "kpzmvx": {
+    "message": "Falha ao copiar"
   },
-  "starChat": {
-    "message": "Marcar página de chat"
+  "zmxvkp": {
+    "message": "Por favor introduza"
   },
-  "unstarChat": {
-    "message": "Unstar"
-  },
-  "inputChatTheme": {
-    "message": "Introduza o título do favorito:"
-  },
-  "themePlaceholder": {
-    "message": "Introduza"
-  },
-  "cancel": {
+  "pxvkmz": {
     "message": "Cancelar"
   },
-  "confirm": {
+  "vkmzpx": {
     "message": "Confirmar"
   },
-  "themeRequired": {
+  "mzpxvk": {
     "message": "O tema não pode estar vazio"
   },
-  "unstar": {
-    "message": "Remover dos favoritos"
+  "xvkpmz": {
+    "message": "Renomear"
   },
-  "viewStarredList": {
-    "message": "Ver lista de favoritos"
-  },
-  "edit": {
-    "message": "Editar conteúdo"
-  },
-  "editStarredContent": {
-    "message": "Editar título favorito"
-  },
-  "contentRequired": {
+  "pzmkvx": {
     "message": "O conteúdo não pode estar vazio"
   },
-  "dataStorageNote": {
-    "message": "Todos os dados armazenados localmente"
+  "kmvxpz": {
+    "message": "Todos os dados são armazenados localmente no seu navegador"
   },
-  "projectOpenSource": {
+  "vxpzmk": {
     "message": "Código aberto, bem-vindo"
   },
-  "starOnGitHub": {
-    "message": "Star on GitHub"
+  "mkvxpz": {
+    "message": "Estrela no GitHub"
   },
-  "shareIfUseful": {
+  "xpzmkv": {
     "message": "Partilhar com amigos"
   },
-  "chromeWebStore": {
-    "message": "Chrome Store"
+  "pkmzvx": {
+    "message": "Chrome Web Store"
   },
-  "copyLatexFormula": {
+  "mvxkpz": {
     "message": "Copiar fórmula LaTeX"
   },
-  "latexFormulaCopied": {
-    "message": "Copiado com sucesso"
+  "kxvpmz": {
+    "message": "Nova pasta"
   },
-  "createFolder": {
-    "message": "Create Folder"
+  "vpmzkx": {
+    "message": "Nova subpasta"
   },
-  "createSubfolder": {
-    "message": "Create Subfolder"
+  "mzxvkp": {
+    "message": "Eliminar"
   },
-  "delete": {
-    "message": "Delete"
+  "pkxvmz": {
+    "message": "Pasta predefinida"
   },
-  "defaultFolder": {
-    "message": "Default Folder"
+  "xmkvpz": {
+    "message": "Criar subpasta em「{folderName}」"
   },
-  "createNewFolder": {
-    "message": "Create New Folder"
+  "vzkpmx": {
+    "message": "Por favor introduza o nome da pasta"
   },
-  "createSubfolderIn": {
-    "message": "Create subfolder in «{folderName}»"
+  "kmxpvz": {
+    "message": "O nome da pasta é obrigatório"
   },
-  "folderNamePlaceholder": {
-    "message": "Enter folder name"
+  "pxmzvk": {
+    "message": "Renomear pasta"
   },
-  "folderNameRequired": {
-    "message": "Folder name is required"
+  "mvzxkp": {
+    "message": "Por favor introduza um novo nome"
   },
-  "editFolderName": {
-    "message": "Edit Folder Name"
+  "kpvzmx": {
+    "message": "O nome da pasta já existe"
   },
-  "newNamePlaceholder": {
-    "message": "Enter new name"
+  "xzvkpm": {
+    "message": "Criada com sucesso"
   },
-  "folderNameExists": {
-    "message": "Folder name already exists"
+  "vmkxpz": {
+    "message": "Atualizada com sucesso"
   },
-  "folderCreated": {
-    "message": "Folder created successfully"
+  "zpxmkv": {
+    "message": "Pasta não encontrada"
   },
-  "folderUpdated": {
-    "message": "Folder updated successfully"
+  "kvpzmx": {
+    "message": "Pasta eliminada"
   },
-  "editFailed": {
-    "message": "Edit failed"
+  "mxkvzp": {
+    "message": "Falha ao eliminar"
   },
-  "folderNotFound": {
-    "message": "Folder not found"
+  "pzvkmx": {
+    "message": "Movida com sucesso"
   },
-  "folderDeleted": {
-    "message": "Folder deleted successfully"
-  },
-  "deleteFailed": {
-    "message": "Delete failed"
-  },
-  "updated": {
-    "message": "Updated"
-  },
-  "createFolderFirst": {
-    "message": "Please create a folder first"
-  },
-  "selectTargetFolder": {
-    "message": "Select target folder (enter number):\n0. Uncategorized\n"
-  },
-  "invalidSelection": {
-    "message": "Invalid selection"
-  },
-  "moved": {
-    "message": "Moved successfully"
-  },
-  "move": {
+  "vxkpmz": {
     "message": "Mover para"
   },
-  "copyLink": {
-    "message": "Copy Link"
+  "wjxnkp": {
+    "message": "Eliminar pasta「{folderName}」?\n\nEsta pasta e as suas subpastas contêm {count} itens guardados. Serão movidos para a pasta predefinida."
   },
-  "moveFailed": {
-    "message": "Move failed"
+  "qzmvkx": {
+    "message": "Tem a certeza de que pretende eliminar a pasta「{folderName}」?"
   },
-  "confirmDeleteFolder": {
-    "message": "Delete folder «{folderName}»?\n\n{count} starred items in this folder and its subfolders will be moved to Uncategorized."
+  "mvkzpx": {
+    "message": "Pesquisar nos guardados..."
   },
-  "uncategorized": {
-    "message": "Uncategorized"
+  "kxzpmv": {
+    "message": "Guardar em"
   },
-  "confirmDeleteEmptyFolder": {
-    "message": "Tem a certeza de que deseja eliminar a pasta «{folderName}»?"
+  "vmzpkx": {
+    "message": "Pasta predefinida"
   },
-  "searchStarred": {
-    "message": "Pesquisar favoritos..."
+  "pkmvxz": {
+    "message": "Título"
+  },
+  "pxkmvz": {
+    "message": "Linha do tempo"
+  },
+  "mzkvxp": {
+    "message": "Quando ativado, uma linha do tempo interativa aparecerá no lado direito da página AI."
+  },
+  "vkpmzx": {
+    "message": "Usar teclas de teclado ↑ / ↓ para navegar conversações"
+  },
+  "xpvmkz": {
+    "message": "Quando ativado, use teclas de teclado ↑ / ↓ para saltar rapidamente entre registos de conversação."
+  },
+  "xmvkpz": {
+    "message": "Caixa de entrada de conversação"
+  },
+  "kvzmxp": {
+    "message": "Usar tecla Enter do teclado para nova linha"
+  },
+  "mxpzvk": {
+    "message": "Quando ativado, na caixa de entrada de conversação AI, pressione tecla Enter uma vez para nova linha, duas vezes rapidamente para enviar mensagem."
+  },
+  "kpxvmz": {
+    "message": "Copiar fórmula"
+  },
+  "zmkvpx": {
+    "message": "Copiar fórmula LaTeX"
+  },
+  "vxkpzm": {
+    "message": "Quando ativado, identificar automaticamente fórmulas na página e clicar para copiar no formato LaTeX."
+  },
+  "mkvzpx": {
+    "message": "Plataformas suportadas"
+  },
+  "zpkmvx": {
+    "message": "Enter para nova linha"
+  },
+  "vxmkpz": {
+    "message": "Tecla Enter: Uma vez para nova linha, duplo para enviar"
+  },
+  "mkpxvz": {
+    "message": "Quando ativado, na caixa de entrada de conversação AI, pressione tecla Enter uma vez para nova linha, duas vezes rapidamente para enviar mensagem."
+  },
+  "zpvmkx": {
+    "message": "Falha ao guardar"
   }
 }
+
