--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -1,197 +1,191 @@
 {
   "extName": {
-    "message": "AI Timeline - 为 AI 对话添加可交互时间轴，轻松复制LaTeX公式"
+    "message": "AI Timeline：复制LaTeX公式、对话时间轴、单击Enter键换行、提示词备忘录"
   },
   "extDescription": {
-    "message": "把你跟 AI 的对话整理成可交互时间轴，🚀快速预览并跳转、📌标记对话节点、⭐️收藏聊天页面、❤️复制 LaTeX 公式，让效率翻倍！"
+    "message": "ChatGPT、DeepSeek、Gemini、Grok及更多模型，最强大的 AI 协作工具，让 AI 工作效率翻倍！"
   },
-  "viewStarred": {
+  "qwxpzm": {
+    "message": "收藏"
+  },
+  "hkjvnr": {
     "message": "查看收藏"
   },
-  "starredList": {
+  "zmvkpx": {
+    "message": "收藏对话"
+  },
+  "bpxjkw": {
+    "message": "取消收藏"
+  },
+  "vnkxpm": {
     "message": "收藏列表"
   },
-  "close": {
-    "message": "关闭"
+  "kxpmzv": {
+    "message": "收藏成功"
   },
-  "starSuccess": {
-    "message": "已收藏"
-  },
-  "unstarSuccess": {
+  "pzmvkx": {
     "message": "已取消收藏"
   },
-  "unstarFailed": {
-    "message": "取消收藏失败"
+  "jwvnkp": {
+    "message": "暂无数据"
   },
-  "starChat": {
-    "message": "收藏聊天页面"
+  "mvkxpz": {
+    "message": "复制"
   },
-  "unstarChat": {
-    "message": "取消收藏"
-  },
-  "noStarredItems": {
-    "message": "暂无收藏"
-  },
-  "copied": {
-    "message": "已复制"
-  },
-  "copyContent": {
-    "message": "复制内容"
-  },
-  "copyFailed": {
-    "message": "复制失败"
-  },
-  "inputChatTheme": {
-    "message": "收藏："
-  },
-  "themePlaceholder": {
-    "message": "请输入"
-  },
-  "cancel": {
-    "message": "取消"
-  },
-  "confirm": {
-    "message": "确定"
-  },
-  "themeRequired": {
-    "message": "主题不能为空"
-  },
-  "unstar": {
-    "message": "取消收藏"
-  },
-  "viewStarredList": {
-    "message": "查看收藏列表"
-  },
-  "edit": {
-    "message": "编辑内容"
-  },
-  "renameFolder": {
-    "message": "重命名"
-  },
-  "actions": {
-    "message": "操作"
-  },
-  "editStarredContent": {
-    "message": "编辑收藏标题"
-  },
-  "contentRequired": {
-    "message": "内容不能为空"
-  },
-  "dataStorageNote": {
-    "message": "所有数据存储在您的浏览器本地"
-  },
-  "projectOpenSource": {
-    "message": "已开源，欢迎"
-  },
-  "starOnGitHub": {
-    "message": "Star on GitHub"
-  },
-  "shareIfUseful": {
-    "message": "分享给朋友"
-  },
-  "chromeWebStore": {
-    "message": "Chrome 商店"
-  },
-  "copyLatexFormula": {
-    "message": "复制 LaTeX 公式"
-  },
-  "latexFormulaCopied": {
+  "xpzmvk": {
     "message": "复制成功"
   },
-  "createFolder": {
+  "vkpxzm": {
+    "message": "编辑"
+  },
+  "kpzmvx": {
+    "message": "复制失败"
+  },
+  "zmxvkp": {
+    "message": "请输入"
+  },
+  "pxvkmz": {
+    "message": "取消"
+  },
+  "vkmzpx": {
+    "message": "确定"
+  },
+  "mzpxvk": {
+    "message": "主题不能为空"
+  },
+  "xvkpmz": {
+    "message": "重命名"
+  },
+  "pzmkvx": {
+    "message": "内容不能为空"
+  },
+  "kmvxpz": {
+    "message": "所有数据存储在您的浏览器本地"
+  },
+  "vxpzmk": {
+    "message": "已开源，欢迎"
+  },
+  "mkvxpz": {
+    "message": "Star on GitHub"
+  },
+  "xpzmkv": {
+    "message": "分享给朋友"
+  },
+  "pkmzvx": {
+    "message": "Chrome 商店"
+  },
+  "mvxkpz": {
+    "message": "复制 LaTeX 公式"
+  },
+  "kxvpmz": {
     "message": "新建文件夹"
   },
-  "createSubfolder": {
+  "vpmzkx": {
     "message": "新建子文件夹"
   },
-  "delete": {
+  "mzxvkp": {
     "message": "删除"
   },
-  "defaultFolder": {
+  "pkxvmz": {
     "message": "默认文件夹"
   },
-  "createNewFolder": {
-    "message": "创建新文件夹"
+  "xmkvpz": {
+    "message": "在「{folderName}」下新建子文件夹"
   },
-  "createSubfolderIn": {
-    "message": "在「{folderName}」下创建子文件夹"
-  },
-  "folderNamePlaceholder": {
+  "vzkpmx": {
     "message": "请输入文件夹名称"
   },
-  "folderNameRequired": {
+  "kmxpvz": {
     "message": "文件夹名称不能为空"
   },
-  "editFolderName": {
+  "pxmzvk": {
     "message": "修改文件夹名称"
   },
-  "newNamePlaceholder": {
+  "mvzxkp": {
     "message": "请输入新名称"
   },
-  "folderNameExists": {
+  "kpvzmx": {
     "message": "文件夹名称已存在"
   },
-  "folderCreated": {
-    "message": "文件夹创建成功"
+  "xzvkpm": {
+    "message": "创建成功"
   },
-  "folderUpdated": {
-    "message": "文件夹已更新"
+  "vmkxpz": {
+    "message": "更新成功"
   },
-  "editFailed": {
-    "message": "编辑失败"
-  },
-  "folderNotFound": {
+  "zpxmkv": {
     "message": "文件夹不存在"
   },
-  "folderDeleted": {
+  "kvpzmx": {
     "message": "文件夹已删除"
   },
-  "deleteFailed": {
+  "mxkvzp": {
     "message": "删除失败"
   },
-  "updated": {
-    "message": "已更新"
+  "pzvkmx": {
+    "message": "移动成功"
   },
-  "createFolderFirst": {
-    "message": "请先创建文件夹"
-  },
-  "selectTargetFolder": {
-    "message": "请选择目标文件夹（输入序号）：\n0. 未分类\n"
-  },
-  "invalidSelection": {
-    "message": "无效的选择"
-  },
-  "moved": {
-    "message": "已移动"
-  },
-  "move": {
+  "vxkpmz": {
     "message": "移动到"
   },
-  "copyLink": {
-    "message": "复制链接"
+  "wjxnkp": {
+    "message": "确定要删除文件夹「{folderName}」吗？\n\n该文件夹及其子文件夹中有 {count} 个收藏项，删除后这些收藏项将移至默认文件夹。"
   },
-  "moveFailed": {
-    "message": "移动失败"
-  },
-  "confirmDeleteFolder": {
-    "message": "删除文件夹「{folderName}」？\n\n该文件夹及其子文件夹中有 {count} 个收藏项，删除后这些收藏项将移至未分类。"
-  },
-  "confirmDeleteEmptyFolder": {
+  "qzmvkx": {
     "message": "确定要删除文件夹「{folderName}」吗？"
   },
-  "uncategorized": {
-    "message": "未分类"
-  },
-  "searchStarred": {
+  "mvkzpx": {
     "message": "搜索收藏..."
   },
-  "selectFolder": {
-    "message": "选择文件夹"
+  "kxzpmv": {
+    "message": "收藏到"
   },
-  "noFolderSelected": {
-    "message": "不选择"
+  "vmzpkx": {
+    "message": "默认文件夹"
   },
-  "starTitle": {
+  "pkmvxz": {
     "message": "标题"
+  },
+  "pxkmvz": {
+    "message": "时间轴"
+  },
+  "mzkvxp": {
+    "message": "启用后，AI 页面右侧会显示可交互时间轴。"
+  },
+  "vkpmzx": {
+    "message": "使用键盘 ↑ / ↓ 键跳转对话"
+  },
+  "xpvmkz": {
+    "message": "启用后，使用键盘 ↑ / ↓ 键，在对话记录间快速跳转。"
+  },
+  "xmvkpz": {
+    "message": "对话输入框"
+  },
+  "kvzmxp": {
+    "message": "使用键盘 Enter 键换行"
+  },
+  "mxpzvk": {
+    "message": "启用后，在 AI 对话输入框中，单击 Enter 键换行，快速双击 Enter 键发送消息。"
+  },
+  "kpxvmz": {
+    "message": "复制公式"
+  },
+  "zmkvpx": {
+    "message": "复制LaTeX公式"
+  },
+  "vxkpzm": {
+    "message": "启用后，自动识别页面上的公式，点击即可复制为 LaTeX 格式。"
+  },
+  "mkvzpx": {
+    "message": "支持的平台"
+  },
+  "zpkmvx": {
+    "message": "单击Enter键换行"
+  },
+  "vxmkpz": {
+    "message": "Enter键：单击换行，双击发送消息"
+  },
+  "mkpxvz": {
+    "message": "启用后，在 AI 对话输入框中，单击 Enter 键换行，快速双击 Enter 键发送消息。"
   }
 }
